deploy/kubernetes/driver.yaml
##############################################
###########                       ############
###########   Controller plugin   ############
###########                       ############
##############################################

kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: csi-upcloud-controller
  namespace: kube-system
spec:
  serviceName: "csi-upcloud"
  replicas: 1
  selector:
    matchLabels:
      app: csi-upcloud-controller
  template:
    metadata:
      labels:
        app: csi-upcloud-controller
        role: csi-upcloud
    spec:
      priorityClassName: system-cluster-critical
      serviceAccount: csi-upcloud-controller-sa
      containers:
        - name: csi-provisioner
          image: k8s.gcr.io/sig-storage/csi-provisioner:v3.1.0
          args:
            - "--csi-address=$(ADDRESS)"
            - "--v=5"
          imagePullPolicy: "Always"
          volumeMounts:
            - name: socket-dir
              mountPath: /var/lib/csi/sockets/pluginproxy/
        - name: csi-attacher
          image: k8s.gcr.io/sig-storage/csi-attacher:v3.4.0
          args:
            - "--v=5"
            - "--csi-address=$(ADDRESS)"
          imagePullPolicy: "Always"
          volumeMounts:
            - name: socket-dir
              mountPath: /var/lib/csi/sockets/pluginproxy/
        - name: csi-upcloud-plugin
          image: ghcr.io/mescudi21/upcloud-csi:test
          args:
            - "--endpoint=$(CSI_ENDPOINT)"
            - "--nodehost=$(NODE_ID)"
            - "--username=$(UPCLOUD_USERNAME)"
            - "--password=$(UPCLOUD_PASSWORD)"
            - "--url=$(UPCLOUD_API_URL)"
          imagePullPolicy: "Always"
          volumeMounts:
            - name: socket-dir
              mountPath: /var/lib/csi/sockets/pluginproxy/
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: socket-dir
          emptyDir: {}
---
########################################
###########                 ############
###########   Node plugin   ############
###########                 ############
########################################

kind: DaemonSet
apiVersion: apps/v1
metadata:
  name: csi-upcloud-node
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app: csi-upcloud-node
  template:
    metadata:
      labels:
        app: csi-upcloud-node
        role: csi-upcloud
    spec:
      priorityClassName: system-node-critical
      serviceAccount: csi-upcloud-node-sa
      hostNetwork: true
      containers:
        - name: csi-node-driver-registrar
          image: k8s.gcr.io/sig-storage/csi-node-driver-registrar:v2.5.0
          args:
            - "--v=5"
            - "--csi-address=$(ADDRESS)"
            - "--kubelet-registration-path=$(DRIVER_REG_SOCK_PATH)"
          lifecycle:
            preStop:
              exec:
                command:
                  [
                      "/bin/sh",
                      "-c",
                      "rm -rf /registration/storage.csi.upcloud.com /registration/storage.csi.upcloud.com-reg.sock",
                  ]
          volumeMounts:
            - name: plugin-dir
              mountPath: /csi/
            - name: registration-dir
              mountPath: /registration/
        - name: csi-upcloud-plugin
          image: ghcr.io/mescudi21/upcloud-csi:test
          args:
            - "--endpoint=$(CSI_ENDPOINT)"
            - "--nodehost=$(NODE_ID)"
            - "--url=$(UPCLOUD_API_URL)"
            - "--username=$(UPCLOUD_USERNAME)"
            - "--password=$(UPCLOUD_PASSWORD)"
          imagePullPolicy: "Always"
          securityContext:
            privileged: true
            capabilities:
              add: ["SYS_ADMIN"]
            allowPrivilegeEscalation: true
          volumeMounts:
            - name: plugin-dir
              mountPath: /csi
            - name: pods-mount-dir
              mountPath: /var/lib/kubelet
              # needed so that any mounts setup inside this container are
              # propagated back to the host machine.
              mountPropagation: "Bidirectional"
            - name: device-dir
              mountPath: /dev
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: registration-dir
          hostPath:
            path: /var/lib/kubelet/plugins_registry/
            type: DirectoryOrCreate
        - name: plugin-dir
          hostPath:
            path: /var/lib/kubelet/plugins/storage.csi.upcloud.com
            type: DirectoryOrCreate
        - name: pods-mount-dir
          hostPath:
            path: /var/lib/kubelet
            type: Directory
        - name: device-dir
          hostPath:
            path: /dev
